--- a/index.html
+++ b/index.html
@@ -22,40 +22,10 @@
             </table>
         </div>
 
-    <div>
-        <h2>Sätze:</h2>
-        `<ul>
-            <li><strong>Na?</strong> ---/> So?</li>
-            <li><strong>Ist alles in Ordnung?</strong> ---/> Is everything alright?</li>
-            <li><strong>Ich gehe morgen nach Frankfurt.</strong></li>
-            <li><strong>Wie schön?</strong> ---/> How nice?</li>
-            <li><strong>Freut mich Sie kennenzulernen?</strong> ---/> Formal</li>
-            <li><strong>Freut mich dich kennenzulernen?</strong> ---/> InFormal</li>
-            <li><strong>Du studierst Deutsch mit Theo.</strong> ---/> X</li>
-            <li><strong>Du lernst Deutsch mit Theo.</strong> ---/> /</li>
-            <li><strong>Sie wohnen in der Stadionstraße in Hamburg.</strong></li>
-            <li><strong>Sie liest gern und geht oft spazieren.</strong> ---/> She likes reading and often goes forwalks.</li>
-            <li><strong>Sie liest nicht gern.</strong></li>
-            <li><strong>Was bist do von Beruf?</strong> ---/> Ich bin Buchhalterin., Ich bin Buchhalterin von Beruf.,
-                Ich arbeite als Buchhalterin.</li>
-            <li><strong>Seit wann wohnt ihr in Deutschland?</strong></li>
-            <li><strong>Wie arbeiten beide in Frankfurt.</strong> ---/> Both of us works in Frankfurt</li>
-            <li><strong>Arbeitet ihr heute nicht?</strong></li>
-            <li><strong>Was machst du gern in deiner Freizeit?</strong></li>
-            <li><strong>Sarahs Wohnun is seher klein, aber seher schön. Sie (for the wohnung) hat ein Wohnzimmer, eine
-                    Küche und ein Schlafzimmer.</strong></li>
-            <li><strong>Vater hat jetzt leider keine Zeit, aber er kommt vielleicht nächsten Monat.</strong></li>
-            <li><strong>Sie bleibt eine Woche in Hamburg.</strong> ---/> She's staying in Hamburg for a week.</li>
-            <li><strong>Habt ihr heute Zeit?</strong></li>
-            <li><strong>Sie kommt aus Wien und (sie 'not mandatory') ist Architektin von Beruf.</strong></li>
-            <li><strong>Es geht mir auch gut === Auch gut</strong></li>
-            <li><strong>Die sind Stühle. Sie sind sehr schön.</strong> ---/> X</li>
-            <li><strong>Das sind Stühle. Sie sind sehr schön.</strong> ---/> /</li>
-            <li><strong>Sarah hat aktuell keine Arbeit.</strong> --/> Sarah currently has no work.</li>
-            <li><strong>Ich habe jetzt leider keine Zeit. == Leider habe ich jetzt keine Zeit. == Jetzt habe iche leider
-                    keine Zeit. == Ich habe leider jetzt keine Zeit.</strong></li>
-        </ul>
-    </div>
+        <div>
+            <h2>Sätze:</h2>
+            <ul id="ulSentences"></ul>
+        </div>
 
     <div>
         <h2>Artikel, die auf dem Fall basieren:</h2>
