[3] clean the notes data

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <ul id="ulSentences"></ul>
         </div>
 
-    <div>
-        <h2>Artikel, die auf dem Fall basieren:</h2>
-        <table border="1" cellpadding="8" cellspacing="0">
+        <div>
+            <h2>Artikel, die auf dem Fall basieren:</h2>
+            <table border="1" cellpadding="8" cellspacing="0">
             <tbody>
                 <tr>
                     <td>Nominative</td>
@@ -60,64 +60,48 @@
                     <td>der</td>
                 </tr>
             </tbody>
-        </table>
-    </div>
+            </table>
+        </div>
 
-    <div>
-        <h2>Bestimmte und Unbestimmte Artikel:</h2>
-        <table border="1" cellpadding="8" cellspacing="0">
-            <thead>
-                <tr>
-                    <th>Definite Articles<br><small>(Bestimmte Artikel)</small></th>
-                    <th>Indefinite Articles<br><small>(Unbestimmte Artikel)</small></th>
-                    <th>Gender</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Der Mann</td>
-                    <td>ein Mann</td>
-                    <td>Masculine</td>
-                </tr>
-                <tr>
-                    <td>Das Kind</td>
-                    <td>ein Kind</td>
-                    <td>Neutral</td>
-                </tr>
-                <tr>
-                    <td>Die Frau</td>
-                    <td>eine Frau</td>
-                    <td>Feminine</td>
-                </tr>
-                <tr>
-                    <td>Die Kinder</td>
-                    <td>—</td>
-                    <td>Plural</td>
-                </tr>
-            </tbody>
-        </table>
+        <div>
+            <h2>Bestimmte und Unbestimmte Artikel:</h2>
+            <table border="1" cellpadding="8" cellspacing="0">
+                <thead>
+                    <tr>
+                        <th>Definite Articles<br><small>(Bestimmte Artikel)</small></th>
+                        <th>Indefinite Articles<br><small>(Unbestimmte Artikel)</small></th>
+                        <th>Gender</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Der Mann</td>
+                        <td>ein Mann</td>
+                        <td>Masculine</td>
+                    </tr>
+                    <tr>
+                        <td>Das Kind</td>
+                        <td>ein Kind</td>
+                        <td>Neutral</td>
+                    </tr>
+                    <tr>
+                        <td>Die Frau</td>
+                        <td>eine Frau</td>
+                        <td>Feminine</td>
+                    </tr>
+                    <tr>
+                        <td>Die Kinder</td>
+                        <td>—</td>
+                        <td>Plural</td>
+                    </tr>
+                </tbody>
+            </table>
 
     </div>
 
     <div>
         <h2>Notizen:</h2>
-        <ul>
-            <li><strong>Du</strong> ---/> you singular</li>
-            <li><strong>Ihr</strong> ---/> you plural</li>
-            <li><strong>Nach</strong> ---/> means to city/country/house 'it has to be with change of the place'</li>
-            <li><strong>Studieren (V)</strong> ---/> only in university</li>
-            <li><strong>Lernen (V)</strong> ---/> the other things</li>
-            <li><strong>Spielen (V)</strong> ---/> with sports and instrumen 'Ich spiele sehr oft Tennis.'</li>
-            <li><strong>Auch and Nicht position</strong> ---/> Ich komme morgen <strong>auch/nicht</strong>. 'last
-                position the general rule', Er spielt <strong>auch/nicht</strong> Fußball. 'split verb here so second
-                last', Wir wohnen <strong>auch/nicht</strong> in Frankfurt. 'in front of prepositions', Es geht mir
-                <strong>auch/nicht</strong> gut. 'in front of adjectives'</li>
-            <li><strong>Genitiv-S mit Namen:</strong> ---/> Sarahs Wohnung == Die Wohnung von Sarah</li>
-            <li><strong>The main rule in German the verb comes in the second place ALWAYS</strong> ---/> Heute Komme ich
-                nicht, aber morgen komme ich</li>
-            <li><strong>When talking about professions, German usually drops the article:</strong> ---/> als Lehrerin
-                NOT als eine Lehrerin</li>
-        </ul>
+        <ul id="ulNotes"></ul>
     </div>
 
     <div>
