[6] adding more knowlage

--- a/index.html
+++ b/index.html
@@ -70,28 +70,33 @@
                     <tr>
                         <th>Definite Articles<br><small>(Bestimmte Artikel)</small></th>
                         <th>Indefinite Articles<br><small>(Unbestimmte Artikel)</small></th>
+                        <th>Nagative Articles<br><small>(Negative Artikel)</small></th>
                         <th>Gender</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Der Mann</td>
+                        <td>der Mann</td>
                         <td>ein Mann</td>
+                        <td>kein Mann</td>
                         <td>Masculine</td>
                     </tr>
                     <tr>
-                        <td>Das Kind</td>
+                        <td>das Kind</td>
                         <td>ein Kind</td>
+                        <td>kein Kind</td>
                         <td>Neutral</td>
                     </tr>
                     <tr>
                         <td>Die Frau</td>
                         <td>eine Frau</td>
+                        <td>keine Frau</td>
                         <td>Feminine</td>
                     </tr>
                     <tr>
                         <td>Die Kinder</td>
                         <td>—</td>
+                        <td>keine Kinder</td>
                         <td>Plural</td>
                     </tr>
                 </tbody>
@@ -113,11 +118,8 @@
                             <td>Dienstag</td>
                             <td>Mittwoch</td>
                             <td rowspan="3">
-                                • alle Wochentage sind <strong>maskulin</strong><br>
-                                • immer großgeschrieben<br>
-                                • mit <strong>am</strong>: am Montag<br>
-                                • regelmäßig: montags<br>
-                                • kein Artikel nach <em>jeden</em><br>
+                                • alle Wochentage sind <strong>maskulin</strong><br><br>
+                                • mit am: am Montag<br><br>
                                 • Wortstellung: Zeit → Verb → Subjekt
                             </td>
                         </tr>
