[7] adding the verbs

--- a/index.html
+++ b/index.html
@@ -135,8 +135,13 @@
                     </tbody>
                 </table>
             </div>
-            
-        </div>
+
+            <div>
+                <h2>Die Verben</h2>
+                <table border="1" cellpadding="8" cellspacing="0">
+                    <tbody id="tVerbs"></tbody>
+                </table>
+            </div>
         
 
     <div>
