[8] adding more data

--- a/index.html
+++ b/index.html
@@ -142,6 +142,13 @@
                     <tbody id="tVerbs"></tbody>
                 </table>
             </div>
+
+            <div>
+                <h2>Tageszeiten</h2>
+                <table border="1" cellpadding="8" cellspacing="0">
+                    <tbody id="tPartDay"></tbody>
+                </table>
+            </div>
         
 
     <div>
