[12] Adding adv and new knowlege

--- a/index.html
+++ b/index.html
@@ -144,6 +144,17 @@
             </div>
 
             <div>
+                <h2>Adverbs of Frequency</h2>
+
+                <div id="lineDiv"></div>
+    
+                <div id="bar">
+                    <div id="fill"></div>
+                </div>
+            </div>
+
+
+            <div>
                 <h2>Tageszeiten</h2>
                 <table border="1" cellpadding="8" cellspacing="0">
                     <tbody id="tPartDay"></tbody>
