[13] Adding neue data

--- a/index.html
+++ b/index.html
@@ -76,27 +76,27 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>der Mann</td>
-                        <td>ein Mann</td>
-                        <td>kein Mann</td>
+                        <td>der Mann | der schöne Mann</td>
+                        <td>ein Mann | ein schöner Mann</td>
+                        <td>kein Mann | kein schöner Mann</td>
                         <td>Masculine</td>
                     </tr>
                     <tr>
-                        <td>das Kind</td>
-                        <td>ein Kind</td>
-                        <td>kein Kind</td>
+                        <td>das Kind | das schöne Kind</td>
+                        <td>ein Kind | das schönes Kind</td>
+                        <td>kein Kind | kein schönes Kind</td>
                         <td>Neutral</td>
                     </tr>
                     <tr>
-                        <td>Die Frau</td>
-                        <td>eine Frau</td>
-                        <td>keine Frau</td>
+                        <td>Die Frau | die schöne Frau</td>
+                        <td>eine Frau | eine schöne Frau</td>
+                        <td>keine Frau | keine schöne Frau</td>
                         <td>Feminine</td>
                     </tr>
                     <tr>
-                        <td>Die Kinder</td>
-                        <td>—</td>
-                        <td>keine Kinder</td>
+                        <td>Die Kinder | die schönen Kinder</td>
+                        <td>— | schöne Kinder</td>
+                        <td>keine Kinder | keine schöne Kinder</td>
                         <td>Plural</td>
                     </tr>
                 </tbody>
