[15] rearrange sentences data and adding neue data

--- a/index.html
+++ b/index.html
@@ -160,6 +160,13 @@
                     <tbody id="tPartDay"></tbody>
                 </table>
             </div>
+
+            <div>
+                <h2>Personalpronomen</h2>
+                <table border="1" cellpadding="8" cellspacing="0">
+                    <tbody id="tPersonalPro"></tbody>
+                </table>
+            </div>
         
 
     <div>
