[17] adding the personal data

--- a/index.html
+++ b/index.html
@@ -164,6 +164,13 @@
             <div>
                 <h2>Personalpronomen</h2>
                 <table border="1" cellpadding="8" cellspacing="0">
+                    <thead>
+                        <tr>
+                            <th>Nominative</th>
+                            <th>Akkusativ</th>
+                            <th>Dative</th>
+                        </tr>
+                    </thead>
                     <tbody id="tPersonalPro"></tbody>
                 </table>
             </div>
