[21] adding time dada + adding more data

--- a/index.html
+++ b/index.html
@@ -180,6 +180,22 @@
                     <tbody id="tPersonalPro"></tbody>
                 </table>
             </div>
+
+            <div>
+                <h2>Die Zeit auf Deutsch</h2>
+                <table border="1" cellpadding="8" cellspacing="0">
+                    <thead>
+                        <tr>
+                            <th id="time">Time</th>
+                            <th>Formal</th>
+                            <th>informal</th>
+                        </tr>
+                    </thead>
+                    <tbody id="tTimeSpoken"></tbody>
+                </table>
+            </div>
+
+            
         
 
     <div>
