[22] Adding new date

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </tr>
                     <tr>
                         <td>das Kind | das schöne Kind</td>
-                        <td>ein Kind | das schönes Kind</td>
+                        <td>ein Kind | ein schönes Kind</td>
                         <td>kein Kind | kein schönes Kind</td>
                         <td>Neutral</td>
                     </tr>
